<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pacman4Android</string>
    <string name="hello">Hello Pacman4Android!</string>
    <string name="action_settings">Settings</string>
    <string name="new_game_button">New Game</string>
    <string name="settings_button">Settings</string>
    <string name="calibration_button">Calibration</string>
    <string name="about_button">Credits</string>
    <string name="choose_level">Choose Level</string>
    <string name="choose_enemies_number">Choose Enemies Number</string>
    <string name="choose_lives_number">Choose Lives</string>
    <string name="go_back_button">Go Back</string>
    <string name="start_game_button">Start Game</string>
    <string name="lifes_number_label">Lifes</string>
    <string name="points_number_label">Points</string>
    <string name="continue_game">Continue</string>
    <string name="exit_game">Exit game</string>
    <string name="results">Results</string>
    <string name="back_to_menu">Click here to back to menu</string>
    <string name="back_to_menu_short">Back to menu</string>
    <string name="default_settings">Restore default</string>
    <string name="balls_remaining">Balls Remaining</string>
    <string name="calibration">Calibration</string>
    <string name="calibrate">Calibrate</string>
    <string name="calibration_hint">To calibrate accelerometer put your device on flat place and touch button calibrate.</string>
    <string name="calibration_offsetx">Offset X:</string>
    <string name="calibration_offsety">Offset Y:</string>
    <string name="calibration_flipx">Flip X</string>
    <string name="calibration_flipy">Flip Y</string>
    <string name="set_axle_x">Set Axle X</string>
    <string name="set_axle_y">Set Axle Y</string>
    <string name="axle_x">x</string>
    <string name="axle_y">y</string>
    <string name="axle_z">z</string>
    <string name="set_axis_hint">Choose physical accelerometer axis to be interpret as axis ingame</string>
    <string name="flip_hint">Set if axle should be reversed</string>



    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>