<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent">

    <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/calibrationLayout"
            android:layout_weight="1">
    </FrameLayout>

    <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView"
            android:layout_weight="1.2">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1.5">


            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/calibration"
                    android:id="@+id/calibrationTitleLabel"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/calibration_offsetx"
                        android:id="@+id/offsetXLabel"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0"
                        android:id="@+id/offsetXResult"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/calibration_offsety"
                        android:id="@+id/offsetYLabel"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="0"
                        android:id="@+id/offsetYResult"/>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"
                    android:text="@string/calibration_hint"
                    android:id="@+id/calibrationHint"/>

            <Button
                    android:layout_width="183dp"
                    android:layout_height="56dp"
                    android:text="@string/calibrate"
                    android:id="@+id/calibrateButton"
                    android:background="@drawable/button_bg"
                    android:textColor="#ffffffff"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/set_axis_hint"
                    android:id="@+id/setAxisHint"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/xAxleRadioGroup">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/set_axle_x"
                            android:id="@+id/axleXSetLabel"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_x"
                            android:id="@+id/xToXRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_y"
                            android:id="@+id/xToYRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_z"
                            android:id="@+id/xToZRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
                </RadioGroup>

                <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:id="@+id/yAxleRadioGroup">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceSmall"
                            android:text="@string/set_axle_y"
                            android:id="@+id/axleYSetLabel"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_x"
                            android:id="@+id/yToXRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_y"
                            android:id="@+id/yToYRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>

                    <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/axle_z"
                            android:id="@+id/yToXZRadio"
                            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Small"/>
                </RadioGroup>
            </LinearLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/flip_hint"
                    android:id="@+id/flipAxisHintLabel"/>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/calibration_flipx"
                        android:id="@+id/flipXLabel"
                        android:layout_gravity="center"/>

                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New ToggleButton"
                        android:id="@+id/flipXToggle"
                        android:layout_marginLeft="40dp"
                        android:textOff="@string/no"
                        android:textOn="@string/yes"/>
            </LinearLayout>

            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/calibration_flipy"
                        android:id="@+id/flipYLabel"
                        android:layout_gravity="center"/>

                <ToggleButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New ToggleButton"
                        android:id="@+id/flipYToggle"
                        android:layout_marginLeft="40dp"
                        android:textOff="@string/no"
                        android:textOn="@string/yes"
                        android:checked="false"/>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>