<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_level"
            android:id="@+id/chooseLevelLabel"
            android:gravity="center_vertical|center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_horizontal"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choose_enemies_number"
            android:id="@+id/chooseEnemiesLabel"
            android:editable="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numberPicker"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="horizontal"
            android:layout_gravity="center"
            style="@android:style/MediaButton"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="right">

        <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/go_back_button"
                android:id="@+id/button"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/button_bg"
                android:textColor="#ffffffff"
                android:onClick="onReturn"/>

        <Button
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:text="@string/new_game_button"
                android:id="@+id/button2"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="5dp"
                android:textColor="#ffffffff"
                android:background="@drawable/button_bg"
                android:onClick="onStartGame"/>
    </RelativeLayout>

</LinearLayout>