<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/results"
                android:id="@+id/resultsLabel"
                android:textSize="60dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:textIsSelectable="false"
                android:singleLine="true"/>

        <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/splash"
                android:background="@drawable/pacman_splash"
                android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:paddingTop="20dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/points_number_label"
                android:id="@+id/pointsLabel"
                android:textSize="45dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:id="@+id/pointsAmount"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/lifes_number_label"
                android:id="@+id/livesLabel"
                android:textSize="45dp"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="0"
                android:id="@+id/livesAmount"/>

        <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/back_to_menu"
                android:id="@+id/resultsConfirmButton"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/button_bg"
                android:textColor="#ffffffff"
                android:textSize="25dp"
                android:onClick="onConfirmButtonClick"/>
    </LinearLayout>

</LinearLayout>